<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dex Editor</string>
    <string name="select_all">Select All</string>
    <string name="text_action_copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="go_to">Go To</string>
    <string name="translate">Translate</string>
    <string name="cut">Cut</string>
    <string name="long_select">Long Select</string>
    <string name="link">Open link</string>
    <string name="comment">Toggle comment</string>
    <string name="share">Share text</string>
    <string name="customize">Customize</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="compile">Compile</string>
    <string name="preferences">Preferences</string>
    <string name="compilation_options">Compilation options</string>
    <string name="dex_version">Dex version</string>
    <string name="remove_all_debug_info">Remove all debug info</string>
    <string name="remove_debug_info_source">Remove debug info .source</string>
    <string name="remove_debug_info_line">Remove debug info .line</string>
    <string name="remove_debug_info_param">Remove debug info .param</string>
    <string name="remove_debug_info_prologue">Remove debug info .prologue</string>
    <string name="remove_debug_info_local">Remove debug info .xxx local</string>
    <string name="full_storage_access_required">Full Storage Access Required</string>
    <string name="manage_all_files_msg">On Android 11+, this app needs special permission to manage all files.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="press_again_msg">Press back again to cancel</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="more_options">More options</string>
    <string name="close_tab">Close tab</string>
    <string name="locate_class">Locate class</string>
    <string name="clear_selection">Clear selection</string>
    <string name="invert_selection">Invert selection</string>
    <string name="loading">Loading…</string>
    <string name="delete_fab">Delete</string>
    <string name="menu_more">More</string>
    <string name="apply_patch_file">Apply patch file (.txt)</string>
    <string name="line_number">Line number</string>
    <string name="text_to_find">Text to find</string>
    <string name="path">Path</string>
    <string name="exclude_list">Exclude list</string>
    <string name="path_separator">/</string>
    <string name="search_type">Search type</string>
    <string name="search_subfolders">Search subfolders</string>
    <string name="match_case">Match case</string>
    <string name="regex">Regex</string>
    <string name="exact_match">Exactly match</string>
    <string name="hex">Hex</string>
    <string name="navigation">Navigation</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="copy_line">Copy line</string>
    <string name="cut_line">Cut line</string>
    <string name="delete_line">Delete line</string>
    <string name="empty_line">Empty line</string>
    <string name="replace_line">Replace line</string>
    <string name="duplicate_line">Duplicate line</string>
    <string name="convert_uppercase">Convert to uppercase</string>
    <string name="convert_lowercase">Convert to lowercase</string>
    <string name="increase_indent">Increase indent</string>
    <string name="decrease_indent">Decrease indent</string>
    <string name="smali_to_java">Smali to Java</string>
    <string name="instructions_query">Instructions query</string>
    <string name="jump_to_line">Jump to line</string>
    <string name="wrap_word">Wrap word</string>
    <string name="read_only_mode">Read-only mode</string>
    <string name="preference">Preference</string>
    <string name="menu_items">Menu items</string>
    <string name="flow_chart">Flow Chart</string>
    <string name="graph_view">Graph View</string>
    <string name="enter_dex_path">Enter dex path</string>
    <string name="pick_dex_file">Pick .dex file</string>
    <string name="open_dex_editor">Open Dex Editor</string>
    <string name="view_source_codes_github">View Source Codes on GitHub</string>
    <string name="search_action">Search</string>
    <string name="show_strings">Show Strings</string>
    <string name="find">Find</string>
    <string name="replace_with">Replace with</string>
    <string name="filter">Filter</string>
    <string name="apply_changes">Apply changes</string>
    <string name="function">Function</string>
    <string name="start_new_search">Start a new search</string>
    <string name="search_current_results">Search in current results</string>
    <string name="replace_current_results">Replace in current results</string>
    <string name="clear_search_results">Clear search results</string>
    <string name="search_results_default" xml:space="preserve">Search results (0) - </string>
    <string name="ellipsis">…</string>
    <string name="cursor_position_default">1:1</string>
    <string name="vertical_separator">│</string>
    <string name="method_index_letter">M</string>
    <string name="string_index_letter">S</string>
    <string name="reorder_menu_item">Reorder menu item</string>
</resources>
