<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Function Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffbbbbbb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#20888888"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/function"
                android:textColor="#808080"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffbbbbbb" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_new_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_search_mt"
            android:drawablePadding="16dp"
            app:drawableTint="#000000"
            android:text="@string/start_new_search"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_search_in_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_search_mt"
            android:drawablePadding="16dp"
            app:drawableTint="#000000"
            android:text="@string/search_current_results"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_replace_in_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_search_replace"
            android:drawablePadding="16dp"
            app:drawableTint="#000000"
            android:text="@string/replace_current_results"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_clear_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_close_mt"
            android:drawablePadding="16dp"
            app:drawableTint="#000000"
            android:text="@string/clear_search_results"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- Search Results Header -->
    <LinearLayout
        android:id="@+id/layout_search_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffbbbbbb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#20888888"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/tv_search_results_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="3"
                android:text="@string/search_results_default"
                android:textColor="#808080"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/btn_treeview_options"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/more_options"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_more_mt"
                app:tint="#808080" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffbbbbbb" />
    </LinearLayout>

</LinearLayout>
